--- a/style/header.css
+++ b/style/header.css
@@ -10,7 +10,8 @@
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
+    position: relative;
 }
 
 .container{
@@ -20,4 +21,14 @@
 
 .container__imagem{
     padding: 1em;
+}
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container__botao:checked~.lista-menu{
+    display: block;
 }
